--- a/src/components/TaskComponents/TaskLister/taskLister.css
+++ b/src/components/TaskComponents/TaskLister/taskLister.css
@@ -1,5 +1,7 @@
 .headerTop h2{
+    font-size:30px;
     margin:20px 0px 20px 20px;
+    transition: .5s ease-in-out !important;
 }
 .restContainer{
     padding-top:30px;
@@ -7,12 +9,14 @@
     overflow-y: auto;
 }
 
-
 /* Media queries*/
+@media only screen and (max-width: 900px){
+    .headerTop h2{
+        font-size:24px; 
+    }
+}
 @media only screen and (max-width: 767px) {
     .headerTop{
-        position: sticky;
-        width:100vw;
         top:30px;
         z-index:1;
         background:white;
